# VehicularEpic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/: main.ts
platform/: delay_load_hook_win.cc
resources/shaders/: webview.fs  webview.vs
scripts/: main.dev.js  preload.js  start.js
src/: FileReader.cc  FileReader.h  InputAction.h  MouseButton.h  Shader.cc  Shader.h  VertexArrayObject.cc  VertexArrayObject.h  Webview.cc  Webview.h  Window.cc  Window.h
web/: index.html  main.ts  router.ts  shims-vue.d.ts  style.css  tsconfig.json
web/src/: App.vue
web/src/components/: Button.vue
web/src/views/: MainMenu.vue
